# kotools

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  WORKLOG.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.claude/skills/release/: SKILL.md
.github/workflows/: publish.yml
docs/: fleet.md  gdocs-markdown.md  ideas.md  memory.md  notes.md  papers-cli-design.md  publish-ai.md  publish.md  pydantic-ai.md  remote.md
src/ko/: _cli_shared.py  arxiv.py  billing.py  brief.py  cli.py  cli_ai.py  cli_google.py  cli_web.py  config.py  dirs.py  doc.py  exa.py  fetch.py  gcal.py  gdocs.py  gdrive.py  gmail.py  google_auth.py  gsheets.py  hf.py  hn.py  llm.py  logs.py  mcp_client.py  mcp_server.py  papers.py  prompt.py  publish.py  refs.py  sessions.py  telemetry.py  ticktick.py  tmdb.py  x.py  yt.py
src/ko/agents/: __init__.py  _files.py  _memory.py  _shared.py  _toolsets.py  ai.py  repo.py  research.py  tv.py
src/ko/prompts/: ko-publish-site.md  local-first-python-app.md  opencode.md  pydantic-ai-agent.md  python-cli.md  research-papers.md  sveltekit-app.md  sveltekit-embedded-ai.md
tests/: test_arxiv.py  test_billing.py  test_brief.py  test_cli.py  test_config.py  test_doc.py  test_exa.py  test_fetch.py  test_files_tools.py  test_gcal.py  test_gdocs.py  test_gdrive.py  test_gmail.py  test_google_auth.py  test_gsheets.py  test_hf.py  test_hn.py  test_llm.py  test_logs.py  test_mcp_client.py  test_memory_tools.py  test_papers.py  test_prompt.py  test_publish.py  test_refs.py  test_sessions.py  test_ticktick.py  test_tmdb.py  test_x.py  test_yt.py
