[project]
name = "kotools"
version = "0.1.0"
description = "Ko's personal opinionated CLI — thin wrappers around SDKs I use often, built so both I and AI agents can lean on it."
readme = "README.md"
requires-python = ">=3.14"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Ko" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "arxiv>=4.0.0",
    "arxiv2markdown>=0.1.0",
    "exa-py>=2.14.0",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.55.0",
    "google-auth-oauthlib>=1.4.0",
    "httpx>=0.28.1",
    "liteparse>=2.1.1",
    "mcp[cli]>=1.28.0",
    "pydantic-ai-slim[google,openrouter]>=2.0.0b7,<3",
    # pydantic-ai v2 beta pins its sibling pydantic-graph to a prerelease too.
    # Referencing it explicitly lets us drop the global prerelease=allow, so only
    # the pydantic-ai beta line is prerelease and everything else stays on stable.
    # Bump/remove both when pydantic-ai v2 ships final.
    "pydantic-graph>=2.0.0b7,<3",
    "trafilatura>=2.1.0",
    "typer>=0.26.7",
    "xdk>=0.9.0",
]

[project.urls]
Repository = "https://github.com/khalido/ko-tools"
Issues = "https://github.com/khalido/ko-tools/issues"

[project.scripts]
ko = "ko.cli:main"
kotools = "ko.cli:main"  # install-name alias; `ko` stays the daily command

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ko"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
