[project]
name = "kotools"
version = "2026.7.14"
description = "Ko's personal opinionated CLI — thin wrappers around SDKs I use often, built so both I and AI agents can lean on it."
readme = "README.md"
requires-python = ">=3.14"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Ko", email = "khalid.omar@gmail.com" }]
keywords = ["cli", "research", "arxiv", "hacker-news", "llm", "agents", "cloudflare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "arxiv>=4.0.0",
    "arxiv2markdown>=0.1.0",
    "exa-py>=2.16.0",  # search(contents=…) API; 2.14/2.15 lack it
    "google-api-python-client>=2.197.0",
    "google-auth>=2.55.0",
    "google-auth-oauthlib>=1.4.0",
    "httpx>=0.28.1",
    "liteparse>=2.1.1",
    "loguru~=0.7.3",
    "mcp[cli]>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "pydantic-ai-slim[google,openrouter,mcp]>=2.4,<3",
    "requests>=2.33.1",
    "trafilatura>=2.1.0",
    "typer>=0.26.7",
    "tzdata>=2025.1",  # guarantees zoneinfo works cross-platform (ko cal)
    "xdk>=0.9.0",
    "youtube-transcript-api>=1.2.4",
]

[project.urls]
Homepage = "https://github.com/khalido/kotools"
Documentation = "https://kotools.khalido.dev"
Repository = "https://github.com/khalido/kotools"
Changelog = "https://github.com/khalido/kotools/blob/main/CHANGELOG.md"
Issues = "https://github.com/khalido/kotools/issues"

[project.scripts]
ko = "ko.cli:main"
kotools = "ko.cli:main"  # install-name alias; `ko` stays the daily command

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ko"]

[tool.hatch.build.targets.sdist]
# Keep node/IDE tooling out of the source distribution — wrangler is dev-only
# (a pip-installed user falls back to `npx wrangler@4`).
exclude = [".claude", "node_modules", "package.json", "package-lock.json"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
